--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Added function exists check for session with redirect to /test.php
		on failure
	- Fixed incorrect extension and stream command being sent when using
		transcode for type other then mp3
	- Fixed default flac downsample command, removed -r as flac decode
		appears to not be raw pcm
	- Fixed download filename to match the catalog filename pattern
	- Added downloads back to stats tracking 
	- Fixed disable/re-enable of users
	- Fixed a bug where ajax actions wouldn't trigger a redirect to login
		when session expired, instead they would just break
	- Fixed a bug with Random Play if you had no artists/albums/playlists
	- Fixed Admin's ability to modify other users preferences
	- Added User and Manager levels to Localplay, determines what the
		user in question can do
	- Moved Newest * to statistics page
	- Database Update, removed useless config options and tweaked a few others
	- Fixed last of the missing MPD functionality (Volume & Playlist Clear)
	- Fixed HTTPQ and improved parsing for urls from MPD & HTTPQ
		they now reconize Democratic Playlists
	- Added paging to genre sub-pages
	- Added missing song data fields to single song view
	- Fixed display issue with playlists when deleting a song
	- Fixed sorting of 'add to Playlist' menu on rightbar
	- Added another layer of checking on catalog deletes to help 
		prevent orphaned elements
	- Fixed lack of prefix on Albums, improves album art search 
		results (Thx darkside)
	- Fixed problem with invalid urls populated to localplay methods
		under certin conditions
	- Fixed Album Art dump bin script 
	- Added paging to the Playlist Song view
	- Fixed error on catalog Update All 